# millionlive

./: CMakeLists.txt
examples/: eigyo_boss_advent.html  eigyo_boss_result.html  eigyo_main.html  livebattle_rarefes.html  mypage.html
examples/eigyo_boss_advent_files/: gree_rpc.min.js
examples/eigyo_boss_attackani_files/: message.js
examples/eigyo_boss_result_files/: gree_spa.css
examples/event_main_files/: gree.min.js  gree_rpc.html
res/: eigyo_boss_attackani.html  eigyo_progress.html  event_3button_result.html  event_3button_selector.html  event_3button_taiseiko.html  event_main.html  livebattle_join.html
src/: parse_html.cpp
